# HelloNativeTriangle

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/siamaster/hellonativetriangle/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: fragment_shader.glsl  vertex_shader.glsl
app/src/main/cpp/hellonativetriangle/: CMakeLists.txt
app/src/main/cpp/hellonativetriangle/include/: file.h  game_loop.h  logger.h  renderer.h  shader.h  texture.h
app/src/main/cpp/hellonativetriangle/src/: file.cpp  game_loop.cpp  renderer.cpp  shader.cpp  texture.cpp
app/src/main/cpp/jni/: CMakeLists.txt  NativeAssetManager_JNI.cpp  Renderer_JNI.cpp
app/src/main/cpp/libs/: CMakeLists.txt
app/src/main/java/com/siamaster/hellonativetriangle/: MainActivity.java  NativeAssetManager.java  Renderer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/siamaster/hellonativetriangle/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
